Fixed the nav bug by adding a z-index

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,7 @@ nav {
   align-items: center;
   position:fixed;
   top:0;
+  z-index: 1;
 }
 
 
